--- a/playbooks/create-vm.yml
+++ b/playbooks/create-vm.yml
@@ -9,7 +9,7 @@
 
   vars:
     resource_group: "MonResourceGroup"
-    location: "westeurope"
+    location: "francecentral"
     vm_name: "vm-demo"
     admin_username: "azureuser"
     admin_password: "Password1234!"
