--- a/playbooks/create-vm.yml
+++ b/playbooks/create-vm.yml
@@ -57,5 +57,6 @@
         image:
           offer: UbuntuServer
           publisher: Canonical
-          sku: "20_04-lts"
+          sku: 20_04-lts-gen2
           version: latest
+
