--- a/playbooks/destroy-all-ressources.yml
+++ b/playbooks/destroy-all-ressources.yml
@@ -14,6 +14,7 @@
     - name: Delete entire resource group and all resources within it
       azure.azcollection.azure_rm_resourcegroup:
         name: "{{ resource_group }}"
+        force_delete_nonempty: true
         state: absent
 
     - name: Done cleanup
